--- a/Cuentas/Views/Login/Registrar.cshtml
+++ b/Cuentas/Views/Login/Registrar.cshtml
@@ -28,6 +28,7 @@
             <div class="wrap-login100">
                 @using (Html.BeginForm("Registrar", "Login", FormMethod.Post))
                 {
+                    @Html.ValidationSummary(true)
                     <span class="login100-form-title p-b-26">
                         Nueva Cuenta
                     </span>
@@ -35,26 +36,25 @@
                         <i class="zmdi zmdi-font"></i>
                     </span>
 
-                    <div class="wrap-input100 validate-input" data-validate="Valid email is: a@b.c">
-                        @Html.TextBoxFor(model => model.UserName, new { @class = "input100", @required = "required" })
-                        <span class="focus-input100" data-placeholder="Usuario"></span>
+                    <div class="wrap-input100 validate-input">
+                        @Html.DropDownListFor(model => model.TipoDocumento, new SelectList(ViewBag.Documentos, "Id", "nombre"), new { @class = "input100" })
                     </div>
 
                     <div class="wrap-input100 validate-input" data-validate="Valid email is: a@b.c">
-                        @Html.TextBoxFor(model => model.Email, new { @class = "input100", @required = "required" })
-                        <span class="focus-input100" data-placeholder="Email "></span>
+                        @Html.TextBoxFor(model => model.Documento, new { @class = "input100"})
+                        <span class="focus-input100" data-placeholder="Numero Documento "></span>
                     </div>
 
                     <div class="wrap-input100 validate-input" data-validate="Valid email is: a@b.c">
-                        @Html.PasswordFor(model => model.Pass, new { @class = "input100", @required = "required" })
+                        @Html.TextBoxFor(model => model.Email, new { @class = "input100"})
                         <span class="focus-input100" data-placeholder="Email "></span>
                     </div>
 
 
                     <div class="wrap-input100 validate-input" data-validate="Valid email is: a@b.c">
-                        @Html.PasswordFor(model => model.PassConfirm, new { @class = "input100", @required = "required" })
-                        <span class="focus-input100" data-placeholder="Email "></span>
-                        @Html.ValidationMessageFor(model => model.PassConfirm)
+                        @Html.PasswordFor(model => model.Pass, new { @class = "input100"})
+                        <span class="focus-input100" data-placeholder="clave "></span>
+                        @Html.ValidationMessageFor(model => model.Pass)
                     </div>
 
                     <div class="container-login100-form-btn">
