--- a/Cuentas/Views/Shared/_Layout.cshtml
+++ b/Cuentas/Views/Shared/_Layout.cshtml
@@ -331,6 +331,8 @@
             <!-- /footer content -->
         </div>
     </div>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.16.0/jquery.validate.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.6/jquery.validate.unobtrusive.min.js"></script>
     <!-- jQuery -->
     <script src="~/vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
